refactor: Improve auto-scroll logic and add retry mechanism