@@ -22,8 +22,6 @@ import org.jetbrains.annotations.Nullable;
 import javax.swing.*;
 import javax.swing.text.BadLocationException;
 import java.awt.*;
-import java.awt.event.HierarchyEvent;
-import java.awt.event.HierarchyListener;
 import java.util.ArrayList;
 import java.util.EnumMap;
 import java.util.List;
@@ -78,6 +76,11 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
      * most once per BufferDiffPanel lifecycle.
      */
     private volatile boolean initialAutoScrollDone = false;
+
+    /**
+     * Guards against concurrent auto-scroll attempts to prevent interference.
+     */
+    private volatile boolean autoScrollInProgress = false;
 
     private int selectedLine;
 
@@ -182,20 +185,19 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
         // Initialize dirty flag - should be false since no edits have been made yet
         recalcDirty();
 
+        // Reset auto-scroll flag for new file/diff content to ensure fresh auto-scroll opportunity
+        initialAutoScrollDone = false;
+
         // Auto-scroll to first difference when diff is opened, or to top when no differences
         if (selectedDelta != null && scrollSynchronizer != null) {
             // Check if auto-scroll should be skipped
-            if (shouldSkipAutoScroll()) {
-                logger.debug("Auto-scroll: Skipping auto-scroll - see previous debug messages for reason");
-            } else {
-                // Auto-scroll to the first difference immediately
-                // The existing retry mechanism in scrollToFirstDifference() handles UI readiness
-                logger.debug("Auto-scroll: Found first difference at line {}, scrolling immediately", selectedDelta.getSource().getPosition());
-                scrollToFirstDifference();
+            boolean skipAutoScroll = shouldSkipAutoScroll();
+
+            if (!skipAutoScroll) {
+                logger.debug("Auto-scrolling to first difference at line {}", selectedDelta.getSource().getPosition());
+                SwingUtilities.invokeLater(this::scrollToFirstDifference);
             }
         } else if (scrollSynchronizer != null) {
-            // For files without differences, scroll both panels to the top immediately
-            logger.debug("Auto-scroll: No differences found, scrolling to top immediately");
             scrollToTop();
         }
     }
@@ -467,6 +469,28 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
         return selectedLine;
     }
 
+    /**
+     * Reset the auto-scroll flag to allow auto-scroll for file navigation.
+     * Called by BrokkDiffPanel when switching between files.
+     */
+    public void resetAutoScrollFlag()
+    {
+        initialAutoScrollDone = false;
+    }
+
+    /**
+     * Reset selectedDelta to first difference for consistent file navigation behavior.
+     * Ensures all file navigation goes to first diff regardless of caching.
+     */
+    public void resetToFirstDifference()
+    {
+        if (patch != null && !patch.getDeltas().isEmpty()) {
+            selectedDelta = patch.getDeltas().getFirst();
+        } else {
+            selectedDelta = null;
+        }
+    }
+
 
     /**
      * Type-safe method to get a file panel by side.
@@ -594,140 +618,116 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
      */
     private void scrollToFirstDifference()
     {
-        logger.debug("scrollToFirstDifference: Called with selectedDelta={}, scrollSynchronizer={}",
-                   selectedDelta != null ? selectedDelta.getSource().getPosition() : "null",
-                   scrollSynchronizer != null ? "available" : "null");
-
         if (selectedDelta == null || scrollSynchronizer == null) {
-            logger.debug("scrollToFirstDifference: Skipping due to null state");
             return;
         }
 
         if (initialAutoScrollDone) {
-            logger.debug("scrollToFirstDifference: Auto-scroll already performed; skipping");
             return;
         }
 
-        // Register hierarchy listeners that will execute the auto-scroll
-        // exactly once when both scroll panes are visible and laid out.
-        registerAutoScrollListeners(getFilePanel(PanelSide.LEFT), getFilePanel(PanelSide.RIGHT));
+        if (autoScrollInProgress) {
+            logger.debug("Auto-scroll already in progress, skipping concurrent attempt");
+            return;
+        }
+
+        autoScrollInProgress = true;
+        // Use robust retry mechanism to handle UI timing issues
+        scheduleAutoScrollWithRetry();
+    }
+
+
+    /**
+     * Schedule auto-scroll with ComponentListener approach to handle UI timing issues.
+     */
+    private void scheduleAutoScrollWithRetry()
+    {
+        // Use a different approach: wait for components to become visible
+        SwingUtilities.invokeLater(this::executeAutoScrollWhenReady);
     }
 
     /**
-     * Registers listeners on the two scroll panes and performs the initial
-     * centering once both panes are displayable and have a non-zero viewport
-     * height.
+     * Execute auto-scroll when UI components are ready, using ComponentListener for reliable timing.
      */
-    private void registerAutoScrollListeners(@Nullable FilePanel leftPanel,
-                                             @Nullable FilePanel rightPanel)
+    private void executeAutoScrollWhenReady()
     {
-        if (leftPanel == null || rightPanel == null
-                || selectedDelta == null || scrollSynchronizer == null) {
+        // Re-check nulls for NullAway
+        if (selectedDelta == null || scrollSynchronizer == null) {
+            autoScrollInProgress = false;
             return;
         }
 
-        var leftScroll  = leftPanel.getScrollPane();
-        var rightScroll = rightPanel.getScrollPane();
+        var leftPanel = getFilePanel(PanelSide.LEFT);
+        var rightPanel = getFilePanel(PanelSide.RIGHT);
 
-        /* If panes are already realised, scroll now and skip listener setup */
-        if (invokeAutoScrollIfReady(leftScroll, rightScroll)) {
+        if (leftPanel == null || rightPanel == null) {
+            autoScrollInProgress = false;
             return;
         }
 
-        /* Shared listener removed after both panes report readiness */
-        HierarchyListener readyListener = new HierarchyListener() {
-            private boolean leftReady  = false;
-            private boolean rightReady = false;
+        var leftScrollPane = leftPanel.getScrollPane();
+        var rightScrollPane = rightPanel.getScrollPane();
 
+        // Check if components are ready immediately
+        if (areComponentsReady(leftScrollPane, rightScrollPane)) {
+            performAutoScroll();
+            return;
+        }
+
+        // Use ComponentListener to wait for visibility
+        var componentListener = new java.awt.event.ComponentAdapter() {
             @Override
-            public void hierarchyChanged(HierarchyEvent e) {
-                var src = (JComponent) e.getComponent();
-
-                if (src == leftScroll && leftScroll.isShowing()
-                        && leftScroll.getViewport().getHeight() > 0) {
-                    leftReady = true;
-                    leftScroll.removeHierarchyListener(this);
-                }
-
-                if (src == rightScroll && rightScroll.isShowing()
-                        && rightScroll.getViewport().getHeight() > 0) {
-                    rightReady = true;
-                    rightScroll.removeHierarchyListener(this);
-                }
-
-                if (leftReady && rightReady && !initialAutoScrollDone) {
-                    initialAutoScrollDone = true;
-                    logger.debug("Auto-scroll: panes ready – centring first delta");
-                     requireNonNull(scrollSynchronizer).showDelta(requireNonNull(selectedDelta));
+            public void componentShown(java.awt.event.ComponentEvent e) {
+                if (areComponentsReady(leftScrollPane, rightScrollPane)) {
+                    performAutoScroll();
+                    // Remove listeners to prevent memory leaks
+                    leftScrollPane.removeComponentListener(this);
+                    rightScrollPane.removeComponentListener(this);
                 }
             }
         };
 
-        leftScroll.addHierarchyListener(readyListener);
-        rightScroll.addHierarchyListener(readyListener);
-    }
+        // Add listener to both scroll panes
+        leftScrollPane.addComponentListener(componentListener);
+        rightScrollPane.addComponentListener(componentListener);
 
-    /**
-     * Executes the auto-scroll immediately when both panes are already visible
-     * and sized. Returns {@code true} if the scroll was performed.
-     */
-    private boolean invokeAutoScrollIfReady(javax.swing.JScrollPane left,
-                                            javax.swing.JScrollPane right)
-    {
-        boolean ready = left.isShowing() && right.isShowing()
-                     && left.getViewport().getHeight()  > 0
-                     && right.getViewport().getHeight() > 0;
-
-        if (ready && !initialAutoScrollDone) {
-            initialAutoScrollDone = true;
-            logger.debug("Auto-scroll: panes already ready – centring first delta");
-            requireNonNull(scrollSynchronizer).showDelta(requireNonNull(selectedDelta));
-            return true;
-        }
-        return false;
-    }
-
-    /**
-     * Schedule auto-scroll with retry mechanism to handle UI timing issues.
-     * Will retry up to 5 times with increasing delays if panels aren't ready.
-     */
-    private void scheduleAutoScrollWithRetry(int attempt)
-    {
-        SwingUtilities.invokeLater(() -> {
-            // Re-check nulls for NullAway
-            if (selectedDelta == null || scrollSynchronizer == null) {
-                logger.debug("scheduleAutoScrollWithRetry: State changed, aborting");
-                return;
-            }
-
-            var leftPanel = getFilePanel(PanelSide.LEFT);
-            var rightPanel = getFilePanel(PanelSide.RIGHT);
-
-            boolean panelsReady = leftPanel != null && rightPanel != null &&
-                                leftPanel.getScrollPane().getViewport().getSize().height > 0 &&
-                                rightPanel.getScrollPane().getViewport().getSize().height > 0;
-
-            if (panelsReady) {
-                logger.debug("scheduleAutoScrollWithRetry: Panels ready on attempt {}, executing auto-scroll to delta at position {}",
-                           attempt + 1, selectedDelta.getSource().getPosition());
-                scrollSynchronizer.showDelta(selectedDelta);
-            } else if (attempt < 5) {
-                // Retry with exponential backoff: 100ms, 200ms, 400ms, 800ms, 1600ms
-                int delay = 100 * (int) Math.pow(2, attempt);
-                logger.debug("scheduleAutoScrollWithRetry: Panels not ready on attempt {} - left viewport height: {}, right viewport height: {}. Retrying in {}ms",
-                           attempt + 1,
-                           leftPanel != null ? leftPanel.getScrollPane().getViewport().getSize().height : -1,
-                           rightPanel != null ? rightPanel.getScrollPane().getViewport().getSize().height : -1,
-                           delay);
-
-                javax.swing.Timer retryTimer = new javax.swing.Timer(delay, e ->
-                    scheduleAutoScrollWithRetry(attempt + 1));
-                retryTimer.setRepeats(false);
-                retryTimer.start();
-            } else {
-                logger.debug("scheduleAutoScrollWithRetry: Max attempts reached ({}), giving up on auto-scroll", attempt + 1);
-            }
+        // Safety timeout - if components don't become ready within 3 seconds, give up
+        javax.swing.Timer timeoutTimer = new javax.swing.Timer(3000, e -> {
+            leftScrollPane.removeComponentListener(componentListener);
+            rightScrollPane.removeComponentListener(componentListener);
+            // Reset the concurrency flag since we're giving up
+            autoScrollInProgress = false;
         });
+        timeoutTimer.setRepeats(false);
+        timeoutTimer.start();
+    }
+
+    /**
+     * Check if scroll pane components are ready for auto-scroll.
+     */
+    private boolean areComponentsReady(javax.swing.JScrollPane leftScrollPane, javax.swing.JScrollPane rightScrollPane)
+    {
+        boolean leftReady = leftScrollPane.isDisplayable() && leftScrollPane.isShowing() &&
+                          leftScrollPane.getViewport().getSize().height > 0;
+        boolean rightReady = rightScrollPane.isDisplayable() && rightScrollPane.isShowing() &&
+                           rightScrollPane.getViewport().getSize().height > 0;
+        return leftReady && rightReady;
+    }
+
+    /**
+     * Perform the actual auto-scroll operation.
+     */
+    private void performAutoScroll()
+    {
+        try {
+            if (selectedDelta != null && scrollSynchronizer != null) {
+                initialAutoScrollDone = true;
+                scrollSynchronizer.showDelta(selectedDelta);
+            }
+        } finally {
+            // Always reset the flag to allow future auto-scroll attempts
+            autoScrollInProgress = false;
+        }
     }
 
     /**
@@ -775,13 +775,13 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
 
         // Primary check: file addition/deletion scenarios (one side essentially empty)
         if (isFileAdditionOrDeletion()) {
-            logger.debug("Auto-scroll skip: File addition/deletion detected");
+            logger.debug("Skipping auto-scroll: file addition/deletion detected");
             return true;
         }
 
         // Check for massive single change covering most of the file
         if (isMassiveFileChange()) {
-            logger.debug("Auto-scroll skip: Massive file change detected");
+            logger.debug("Skipping auto-scroll: massive file change detected");
             return true;
         }
 
@@ -795,7 +795,7 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
         });
 
         if (hasOnlyInsertDelete && isVeryAsymmetricContent()) {
-            logger.debug("Auto-scroll skip: Pure INSERT/DELETE deltas with very asymmetric content");
+            logger.debug("Skipping auto-scroll: pure INSERT/DELETE with asymmetric content");
             return true;
         }
 
@@ -826,9 +826,20 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
         int leftLines = leftDoc.getNumberOfLines();
         int rightLines = rightDoc.getNumberOfLines();
 
-        // Consider it file addition/deletion if one side has <= 2 lines
-        // This handles empty files and files with just minimal content
-        return leftLines <= 2 || rightLines <= 2;
+        // Be more conservative: only consider it file addition/deletion if one side is actually empty (0-1 lines)
+        // and the other side has substantial content (> 5 lines)
+        boolean leftEmpty = leftLines <= 1;
+        boolean rightEmpty = rightLines <= 1;
+        boolean leftSubstantial = leftLines > 5;
+        boolean rightSubstantial = rightLines > 5;
+
+        boolean isAdditionOrDeletion = (leftEmpty && rightSubstantial) || (rightEmpty && leftSubstantial);
+
+        if (isAdditionOrDeletion) {
+            logger.debug("File addition/deletion detected: left={} lines, right={} lines", leftLines, rightLines);
+        }
+
+        return isAdditionOrDeletion;
     }
 
     /**
@@ -841,20 +852,28 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
             return false;
         }
 
-        var delta = patch.getDeltas().get(0);
+        var delta = patch.getDeltas().getFirst();
 
-        // Consider it massive if:
-        // 1. Change starts near the beginning (position <= 2)
-        // 2. Either source or target has substantial content (> 20 lines)
-        return delta.getSource().getPosition() <= 2 &&
-               (delta.getSource().size() > 20 || delta.getTarget().size() > 20);
+        // Be more restrictive: consider it massive only if:
+        // 1. Change starts at the very beginning (position <= 1)
+        // 2. AND both source and target have very substantial content (> 50 lines)
+        // This catches whole-file replacements but not normal large edits
+        boolean isMassive = delta.getSource().getPosition() <= 1 &&
+               delta.getSource().size() > 50 && delta.getTarget().size() > 50;
+
+        if (isMassive) {
+            logger.debug("Massive file change detected: position={}, sourceSize={}, targetSize={}",
+                       delta.getSource().getPosition(), delta.getSource().size(), delta.getTarget().size());
+        }
+
+        return isMassive;
     }
 
     /**
      * Detects very asymmetric content where one side is much smaller than the other.
      * This helps distinguish between normal file modifications with INSERT/DELETE deltas
      * vs actual file additions/deletions.
-     * @return true if one side has < 5 lines and the other has > 20 lines
+     * @return true if one side has < 3 lines and the other has > 50 lines
      */
     private boolean isVeryAsymmetricContent()
     {
@@ -875,8 +894,15 @@ public class BufferDiffPanel extends AbstractContentPanel implements ThemeAware,
         int leftLines = leftDoc.getNumberOfLines();
         int rightLines = rightDoc.getNumberOfLines();
 
-        // Very asymmetric if one side < 5 lines and other side > 20 lines
-        return (leftLines < 5 && rightLines > 20) || (rightLines < 5 && leftLines > 20);
+        // Very asymmetric if one side < 3 lines and other side > 50 lines
+        // This is much more restrictive to avoid blocking normal file diffs
+        boolean isAsymmetric = (leftLines < 3 && rightLines > 50) || (rightLines < 3 && leftLines > 50);
+
+        if (isAsymmetric) {
+            logger.debug("Very asymmetric content detected: left={} lines, right={} lines", leftLines, rightLines);
+        }
+
+        return isAsymmetric;
     }
 
     /**
